# esp32p4-basic

./: .gitignore  CMakeLists.txt  README.md  config.env  flash_app_args  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  local_components_list.temp.yml  project_description.json  sdkconfig.defaults.esp32p4
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
gdbinit/: gdbinit  symbols
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: ble_manager.hpp  command_interpreter.hpp  relay_manager.hpp  wifi_manager.hpp
main/src/: ble_manager.cpp  command_interpreter.cpp  relay_manager.cpp  wifi_manager.cpp
